--- a/package.json
+++ b/package.json
@@ -16,28 +16,34 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.13.1",
-    "koa-body": "^4.2.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-json-error": "^3.1.2",
     "koa-logger": "^3.2.1",
+    "koa-multer": "^1.0.2",
     "koa-router": "^10.1.1",
     "koa-static-server": "^1.5.2",
     "koa2-cors": "^2.0.6",
-    "log4js": "^6.3.0"
+    "log4js": "^6.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-json": "^2.0.20",
     "@types/koa-json-error": "^3.1.3",
     "@types/koa-logger": "^3.1.1",
+    "@types/koa-multer": "^1.0.1",
     "@types/koa-router": "^7.4.4",
     "@types/koa-static-server": "^1.3.1",
     "@types/koa2-cors": "^2.0.2",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
+    "@types/uuid": "^8.3.1",
     "apidoc": "^0.29.0",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.4.3"
   }
 }
