--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "koa-static-server": "^1.5.2",
     "koa2-cors": "^2.0.6",
     "log4js": "^6.3.0",
+    "moment": "^2.29.1",
+    "node-xlsx": "^0.17.1",
     "pm2": "^5.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/node-xlsx": "^0.15.2",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-json": "^2.0.20",
