--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "outDir": "./dist/src",
     "esModuleInterop": true,
     "sourceMap": false,
     "experimentalDecorators": true,
