--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "log4js": "^6.3.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.5",
+    "node-schedule": "^2.0.0",
     "node-xlsx": "^0.17.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node-xlsx": "^0.15.2",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-json": "^2.0.20",
@@ -38,6 +38,8 @@
     "@types/koa2-cors": "^2.0.2",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.11.97",
+    "@types/node-schedule": "^1.3.2",
+    "@types/node-xlsx": "^0.15.2",
     "@types/uuid": "^8.3.1",
     "apidoc": "^0.29.0",
     "cross-env": "^7.0.3",
