feat:添加apidoc注释，同时修改delete参数为post方式，修改JOI识别的扩展性

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "nodejs 基础模板",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon ./bin/www",
+    "start": "cross-env NODE_ENV=development ts-node ./bin/www",
     "build": "node ./build/start && tsc && node ./build/end",
     "apidoc": "node ./apidoc.js",
     "printDir": "node printDir.js"
