feat:修改了md说明

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "cross-env NODE_ENV=development nodemon ./bin/www",
     "start": "cross-env NODE_ENV=development ts-node ./bin/www",
     "build": "node ./build/start && tsc && node ./build/end",
+    "obfuscator": "npm run build && node ./build/encryption",
     "apidoc": "node ./apidoc.js",
     "printDir": "node printDir.js"
   },
@@ -49,7 +50,7 @@
     "@types/uuid": "^8.3.1",
     "apidoc": "^0.29.0",
     "cross-env": "^7.0.3",
-    "javascript-obfuscator": "^3.0.0",
+    "javascript-obfuscator": "^4.0.0",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
