--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cpc-base-koa2-ts",
+  "name": "koa2-typescript",
   "version": "1.0.0",
   "description": "nodejs 基础模板",
   "scripts": {
@@ -7,53 +7,54 @@
     "start": "cross-env NODE_ENV=development ts-node ./bin/www",
     "build": "node ./build/start && tsc && node ./build/end",
     "obfuscator": "npm run build && node ./build/encryption",
-    "apidoc": "node ./apidoc.js",
-    "printDir": "node printDir.js"
+    "eslint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "apidoc": "node ./apidoc.js"
   },
   "author": "939979509@qq.com",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
+    "better-sqlite3": "^8.4.0",
+    "dayjs": "^1.11.9",
     "joi": "^17.4.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-json-error": "^3.1.2",
     "koa-logger": "^3.2.1",
-    "koa-multer": "^1.0.2",
     "koa-router": "^10.1.1",
     "koa-static-server": "^1.5.2",
     "koa2-cors": "^2.0.6",
-    "log4js": "^6.3.0",
-    "moment": "^2.29.1",
-    "mongoose": "^6.0.5",
     "node-schedule": "^2.0.0",
-    "node-xlsx": "^0.17.1",
+    "nodemailer": "^6.7.3",
     "svg-captcha": "^1.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.5",
+    "@types/better-sqlite3": "^7.6.4",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-json": "^2.0.20",
     "@types/koa-json-error": "^3.1.3",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-multer": "^1.0.1",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/koa-static-server": "^1.3.1",
     "@types/koa2-cors": "^2.0.2",
-    "@types/moment": "^2.13.0",
-    "@types/mongoose": "^5.11.97",
     "@types/node-schedule": "^1.3.2",
     "@types/node-xlsx": "^0.15.2",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.1",
-    "apidoc": "^0.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "apidoc": "^1.1.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.43.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "javascript-obfuscator": "^4.0.0",
     "nodemon": "^2.0.12",
-    "ts-node": "^10.2.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.4.3"
+    "typescript": "5.0.4",
+    "ts-node": "^10.2.1"
   }
 }
