增强ts的类型，修改了统一返回，rbac模式修改中。。。

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "better-sqlite3": "^8.4.0",
     "dayjs": "^1.11.9",
     "joi": "^17.4.2",
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
@@ -48,13 +48,13 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
-    "apidoc": "^1.1.0",
+    "apidoc": "0.29.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "eslint-plugin-typescript": "^0.14.0",
     "javascript-obfuscator": "^4.0.0",
     "nodemon": "^2.0.12",
-    "typescript": "5.0.4",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "5.0.4"
   }
 }
