--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
-    "apidoc": "0.29.0",
+    "apidoc": "^0.29.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "eslint-plugin-typescript": "^0.14.0",
